# LANTERN

./: .gitignore  EXAMPLES.md  README.md  TRAINING.md  example_data.txt  generate.py  pyproject.toml  train.py
files/: README_theory.md  lantern_controller_generation.md  lantern_controller_init.md  lantern_controller_uncertainty_controller.md  lantern_init.md  lantern_models_init.md  lantern_models_recursive_transformer.md  lantern_models_sparse_attention.md  lantern_uncertainty_bayesian.md  lantern_uncertainty_entropy.md  lantern_uncertainty_init.md  lantern_uncertainty_semantic_dispersion.md  lantern_utils_config.md  lantern_utils_init.md  tests_init.md  tests_test_controllers.md  tests_test_models.md  tests_test_uncertainty.md
lantern/: __init__.py
lantern/controller/: __init__.py  generation.py  uncertainty_controller.py
lantern/models/: __init__.py  lantern_model.py  recursive_transformer.py  sparse_attention.py
lantern/uncertainty/: __init__.py  bayesian.py  entropy.py  semantic_dispersion.py
lantern/utils/: __init__.py  config.py
tests/: __init__.py  test_controllers.py  test_lantern_model.py  test_models.py  test_uncertainty.py
